[project]
name = "pysantec"
version = "0.0.1"
description = "Python Package for Santec IL and PDL Swept Test System"
license = "MIT"
license-files = ["LICEN[CS]E*"]
readme = "README.md"
requires-python = ">=3.7"
authors = [
    { name = "Santec Holdings Corporation" }
]
maintainers = [
    { name = "Rakshith P J" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows"
]

[project.urls]
Homepage = "https://github.com/santec-corporation/pysantec"
Repository = "https://github.com/santec-corporation/pysantec"
ChangeLog     = "https://github.com/santec-corporation/pysantec/CHANGELOG.md"

[build-system]
requires = ["setuptools>=61.2", "wheel"]
build-backend = "setuptools.build_meta"
